--- a/landing.css
+++ b/landing.css
@@ -31,7 +31,7 @@ button:hover{
     background-color: white;
 }
 body{
-    background-image: url(../Images/space.png);
+    background-image: url(../Images/space.PNG);
 }
 hr{
     height: 2%;
