--- a/home.css
+++ b/home.css
@@ -27,7 +27,7 @@
     cursor: pointer;
     transition: all 0.3s ease 0s;
 }
-button:hover{
+.button1:hover{
     background-color: white;
 }
 .about{
